TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/libtiepieloader.h


extern LibTiePieScpChGetImpedance_t ScpChGetImpedance;

extern LibTiePieScpChGetBandwidths_t ScpChGetBandwidths;

extern LibTiePieScpChGetBandwidth_t ScpChGetBandwidth;

extern LibTiePieScpChSetBandwidth_t ScpChSetBandwidth;

extern LibTiePieScpChGetCouplings_t ScpChGetCouplings;

extern LibTiePieScpChGetCoupling_t ScpChGetCoupling;

extern LibTiePieScpChSetCoupling_t ScpChSetCoupling;

extern LibTiePieScpChGetEnabled_t ScpChGetEnabled;

extern LibTiePieScpChSetEnabled_t ScpChSetEnabled;

extern LibTiePieScpChGetProbeGain_t ScpChGetProbeGain;

extern LibTiePieScpChSetProbeGain_t ScpChSetProbeGain;

extern LibTiePieScpChGetProbeOffset_t ScpChGetProbeOffset;

extern LibTiePieScpChSetProbeOffset_t ScpChSetProbeOffset;

extern LibTiePieScpChGetAutoRanging_t ScpChGetAutoRanging;

extern LibTiePieScpChSetAutoRanging_t ScpChSetAutoRanging;

extern LibTiePieScpChGetRanges_t ScpChGetRanges;

extern LibTiePieScpChGetRangesEx_t ScpChGetRangesEx;

extern LibTiePieScpChGetRange_t ScpChGetRange;

extern LibTiePieScpChSetRange_t ScpChSetRange;

extern LibTiePieScpChHasSafeGround_t ScpChHasSafeGround;

extern LibTiePieScpChGetSafeGroundEnabled_t ScpChGetSafeGroundEnabled;

extern LibTiePieScpChSetSafeGroundEnabled_t ScpChSetSafeGroundEnabled;

extern LibTiePieScpChGetSafeGroundThresholdMin_t ScpChGetSafeGroundThresholdMin;

extern LibTiePieScpChGetSafeGroundThresholdMax_t ScpChGetSafeGroundThresholdMax;

extern LibTiePieScpChGetSafeGroundThreshold_t ScpChGetSafeGroundThreshold;

extern LibTiePieScpChSetSafeGroundThreshold_t ScpChSetSafeGroundThreshold;

extern LibTiePieScpChVerifySafeGroundThreshold_t ScpChVerifySafeGroundThreshold;

extern LibTiePieScpChHasTrigger_t ScpChHasTrigger;

extern LibTiePieScpChHasTriggerEx_t ScpChHasTriggerEx;

extern LibTiePieScpChTrIsAvailable_t ScpChTrIsAvailable;

extern LibTiePieScpChTrIsAvailableEx_t ScpChTrIsAvailableEx;

extern LibTiePieScpChTrIsTriggered_t ScpChTrIsTriggered;

extern LibTiePieScpChTrGetEnabled_t ScpChTrGetEnabled;

extern LibTiePieScpChTrSetEnabled_t ScpChTrSetEnabled;

extern LibTiePieScpChTrGetKinds_t ScpChTrGetKinds;

extern LibTiePieScpChTrGetKindsEx_t ScpChTrGetKindsEx;

extern LibTiePieScpChTrGetKind_t ScpChTrGetKind;

extern LibTiePieScpChTrSetKind_t ScpChTrSetKind;

extern LibTiePieScpChTrGetLevelModes_t ScpChTrGetLevelModes;

extern LibTiePieScpChTrGetLevelMode_t ScpChTrGetLevelMode;

extern LibTiePieScpChTrSetLevelMode_t ScpChTrSetLevelMode;

extern LibTiePieScpChTrGetLevelCount_t ScpChTrGetLevelCount;

extern LibTiePieScpChTrGetLevel_t ScpChTrGetLevel;

extern LibTiePieScpChTrSetLevel_t ScpChTrSetLevel;

extern LibTiePieScpChTrGetHysteresisCount_t ScpChTrGetHysteresisCount;

extern LibTiePieScpChTrGetHysteresis_t ScpChTrGetHysteresis;

extern LibTiePieScpChTrSetHysteresis_t ScpChTrSetHysteresis;

extern LibTiePieScpChTrGetConditions_t ScpChTrGetConditions;

extern LibTiePieScpChTrGetConditionsEx_t ScpChTrGetConditionsEx;

extern LibTiePieScpChTrGetCondition_t ScpChTrGetCondition;

extern LibTiePieScpChTrSetCondition_t ScpChTrSetCondition;

extern LibTiePieScpChTrGetTimeCount_t ScpChTrGetTimeCount;

extern LibTiePieScpChTrGetTime_t ScpChTrGetTime;

extern LibTiePieScpChTrSetTime_t ScpChTrSetTime;

extern LibTiePieScpChTrVerifyTime_t ScpChTrVerifyTime;

extern LibTiePieScpChTrVerifyTimeEx2_t ScpChTrVerifyTimeEx2;

extern LibTiePieScpGetData_t ScpGetData;

extern LibTiePieScpGetData1Ch_t ScpGetData1Ch;

extern LibTiePieScpGetData2Ch_t ScpGetData2Ch;

extern LibTiePieScpGetData3Ch_t ScpGetData3Ch;

extern LibTiePieScpGetData4Ch_t ScpGetData4Ch;

extern LibTiePieScpGetData5Ch_t ScpGetData5Ch;

extern LibTiePieScpGetData6Ch_t ScpGetData6Ch;

extern LibTiePieScpGetData7Ch_t ScpGetData7Ch;

extern LibTiePieScpGetData8Ch_t ScpGetData8Ch;

extern LibTiePieScpGetValidPreSampleCount_t ScpGetValidPreSampleCount;

extern LibTiePieScpChGetDataValueRange_t ScpChGetDataValueRange;

extern LibTiePieScpChGetDataValueMin_t ScpChGetDataValueMin;

extern LibTiePieScpChGetDataValueMax_t ScpChGetDataValueMax;

extern LibTiePieScpGetDataRaw_t ScpGetDataRaw;

extern LibTiePieScpGetDataRaw1Ch_t ScpGetDataRaw1Ch;

extern LibTiePieScpGetDataRaw2Ch_t ScpGetDataRaw2Ch;

extern LibTiePieScpGetDataRaw3Ch_t ScpGetDataRaw3Ch;

extern LibTiePieScpGetDataRaw4Ch_t ScpGetDataRaw4Ch;

extern LibTiePieScpGetDataRaw5Ch_t ScpGetDataRaw5Ch;

extern LibTiePieScpGetDataRaw6Ch_t ScpGetDataRaw6Ch;

extern LibTiePieScpGetDataRaw7Ch_t ScpGetDataRaw7Ch;

extern LibTiePieScpGetDataRaw8Ch_t ScpGetDataRaw8Ch;

extern LibTiePieScpChGetDataRawType_t ScpChGetDataRawType;

extern LibTiePieScpChGetDataRawValueRange_t ScpChGetDataRawValueRange;

extern LibTiePieScpChGetDataRawValueMin_t ScpChGetDataRawValueMin;

extern LibTiePieScpChGetDataRawValueZero_t ScpChGetDataRawValueZero;

extern LibTiePieScpChGetDataRawValueMax_t ScpChGetDataRawValueMax;

extern LibTiePieScpChIsRangeMaxReachable_t ScpChIsRangeMaxReachable;

extern LibTiePieScpIsGetDataAsyncCompleted_t ScpIsGetDataAsyncCompleted;

extern LibTiePieScpStartGetDataAsync_t ScpStartGetDataAsync;

extern LibTiePieScpStartGetDataAsyncRaw_t ScpStartGetDataAsyncRaw;

extern LibTiePieScpCancelGetDataAsync_t ScpCancelGetDataAsync;

extern LibTiePieScpSetCallbackDataReady_t ScpSetCallbackDataReady;

extern LibTiePieScpSetCallbackDataOverflow_t ScpSetCallbackDataOverflow;

extern LibTiePieScpSetCallbackConnectionTestCompleted_t ScpSetCallbackConnectionTestCompleted;

extern LibTiePieScpSetCallbackTriggered_t ScpSetCallbackTriggered;
extern LibTiePieScpSetEventDataReady_t ScpSetEventDataReady;

extern LibTiePieScpSetEventDataOverflow_t ScpSetEventDataOverflow;

extern LibTiePieScpSetEventConnectionTestCompleted_t ScpSetEventConnectionTestCompleted;

extern LibTiePieScpSetEventTriggered_t ScpSetEventTriggered;
extern LibTiePieScpSetEventDataReady_t ScpSetEventDataReady;

extern LibTiePieScpSetEventDataOverflow_t ScpSetEventDataOverflow;

extern LibTiePieScpSetEventConnectionTestCompleted_t ScpSetEventConnectionTestCompleted;

extern LibTiePieScpSetEventTriggered_t ScpSetEventTriggered;