TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/LibTiePie.pas

function ScpChGetImpedance( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl;
function ScpChGetBandwidths( hDevice : TLibTiePieHandle ; wCh : Word ; pList : PDouble ; dwLength : LongWord ) : LongWord; cdecl;
function ScpChGetBandwidth( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl;
function ScpChSetBandwidth( hDevice : TLibTiePieHandle ; wCh : Word ; dBandwidth : Double ) : Double; cdecl;
function ScpChGetCouplings( hDevice : TLibTiePieHandle ; wCh : Word ) : UInt64; cdecl;
function ScpChGetCoupling( hDevice : TLibTiePieHandle ; wCh : Word ) : UInt64; cdecl;
function ScpChSetCoupling( hDevice : TLibTiePieHandle ; wCh : Word ; qwCoupling : UInt64 ) : UInt64; cdecl;
function ScpChGetEnabled( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
function ScpChSetEnabled( hDevice : TLibTiePieHandle ; wCh : Word ; bEnable : ByteBool ) : ByteBool; cdecl;
function ScpChGetProbeGain( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl;
function ScpChSetProbeGain( hDevice : TLibTiePieHandle ; wCh : Word ; dProbeGain : Double ) : Double; cdecl;
function ScpChGetProbeOffset( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl;
function ScpChSetProbeOffset( hDevice : TLibTiePieHandle ; wCh : Word ; dProbeOffset : Double ) : Double; cdecl;
function ScpChGetAutoRanging( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
function ScpChSetAutoRanging( hDevice : TLibTiePieHandle ; wCh : Word ; bEnable : ByteBool ) : ByteBool; cdecl;
function ScpChGetRanges( hDevice : TLibTiePieHandle ; wCh : Word ; pList : PDouble ; dwLength : LongWord ) : LongWord; cdecl;
function ScpChGetRangesEx( hDevice : TLibTiePieHandle ; wCh : Word ; qwCoupling : UInt64 ; pList : PDouble ; dwLength : LongWord ) : LongWord; cdecl;
function ScpChGetRange( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl;
function ScpChSetRange( hDevice : TLibTiePieHandle ; wCh : Word ; dRange : Double ) : Double; cdecl;
function ScpChHasSafeGround( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
function ScpChGetSafeGroundEnabled( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
function ScpChSetSafeGroundEnabled( hDevice : TLibTiePieHandle ; wCh : Word ; bEnable : ByteBool ) : ByteBool; cdecl;
function ScpChGetSafeGroundThresholdMin( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl;
function ScpChGetSafeGroundThresholdMax( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl;
function ScpChGetSafeGroundThreshold( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl;
function ScpChSetSafeGroundThreshold( hDevice : TLibTiePieHandle ; wCh : Word ; dThreshold : Double ) : Double; cdecl;
function ScpChVerifySafeGroundThreshold( hDevice : TLibTiePieHandle ; wCh : Word ; dThreshold : Double ) : Double; cdecl;
function ScpChHasTrigger( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
function ScpChHasTriggerEx( hDevice : TLibTiePieHandle ; wCh : Word ; dwMeasureMode : LongWord ) : ByteBool; cdecl;
function ScpChTrIsAvailable( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
function ScpChTrIsAvailableEx( hDevice : TLibTiePieHandle ; wCh : Word ; dwMeasureMode : LongWord ; dSampleFrequency : Double ; byResolution : Byte ; pChannelEnabled , pChannelTriggerEnabled : PByteBool ; wChannelCount : Word ) : ByteBool; cdecl;
function ScpChTrIsTriggered( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
function ScpChTrGetEnabled( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
function ScpChTrSetEnabled( hDevice : TLibTiePieHandle ; wCh : Word ; bEnable : ByteBool ) : ByteBool; cdecl;
function ScpChTrGetKinds( hDevice : TLibTiePieHandle ; wCh : Word ) : UInt64; cdecl;
function ScpChTrGetKindsEx( hDevice : TLibTiePieHandle ; wCh : Word ; dwMeasureMode : LongWord ) : UInt64; cdecl;
function ScpChTrGetKind( hDevice : TLibTiePieHandle ; wCh : Word ) : UInt64; cdecl;
function ScpChTrSetKind( hDevice : TLibTiePieHandle ; wCh : Word ; qwTriggerKind : UInt64 ) : UInt64; cdecl;
function ScpChTrGetLevelModes( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl;
function ScpChTrGetLevelMode( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl;
function ScpChTrSetLevelMode( hDevice : TLibTiePieHandle ; wCh : Word ; dwLevelMode : LongWord ) : LongWord; cdecl;
function ScpChTrGetLevelCount( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl;
function ScpChTrGetLevel( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ) : Double; cdecl;
function ScpChTrSetLevel( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ; dLevel : Double ) : Double; cdecl;
function ScpChTrGetHysteresisCount( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl;
function ScpChTrGetHysteresis( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ) : Double; cdecl;
function ScpChTrSetHysteresis( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ; dHysteresis : Double ) : Double; cdecl;
function ScpChTrGetConditions( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl;
function ScpChTrGetConditionsEx( hDevice : TLibTiePieHandle ; wCh : Word ; dwMeasureMode : LongWord ; qwTriggerKind : UInt64 ) : LongWord; cdecl;
function ScpChTrGetCondition( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl;
function ScpChTrSetCondition( hDevice : TLibTiePieHandle ; wCh : Word ; dwCondition : LongWord ) : LongWord; cdecl;
function ScpChTrGetTimeCount( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl;
function ScpChTrGetTime( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ) : Double; cdecl;
function ScpChTrSetTime( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ; dTime : Double ) : Double; cdecl;
function ScpChTrVerifyTime( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ; dTime : Double ) : Double; cdecl;
function ScpChTrVerifyTimeEx2( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ; dTime : Double ; dwMeasureMode : LongWord ; dSampleFrequency : Double ; qwTriggerKind : UInt64 ; dwCondition : LongWord ) : Double; cdecl;
function ScpGetData( hDevice : TLibTiePieHandle ; pBuffers : PPSingle ; wChannelCount : Word ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetData1Ch( hDevice : TLibTiePieHandle ; pBufferCh1 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetData2Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetData3Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetData4Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetData5Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 , pBufferCh5 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetData6Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 , pBufferCh5 , pBufferCh6 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetData7Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 , pBufferCh5 , pBufferCh6 , pBufferCh7 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetData8Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 , pBufferCh5 , pBufferCh6 , pBufferCh7 , pBufferCh8 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetValidPreSampleCount( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
procedure ScpChGetDataValueRange( hDevice : TLibTiePieHandle ; wCh : Word ; pMin , pMax : PDouble ); cdecl;
function ScpChGetDataValueMin( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl;
function ScpChGetDataValueMax( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl;
function ScpGetDataRaw( hDevice : TLibTiePieHandle ; pBuffers : PPointer ; wChannelCount : Word ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetDataRaw1Ch( hDevice : TLibTiePieHandle ; pBufferCh1 : Pointer ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetDataRaw2Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 : Pointer ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetDataRaw3Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 : Pointer ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetDataRaw4Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 : Pointer ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetDataRaw5Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 , pBufferCh5 : Pointer ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetDataRaw6Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 , pBufferCh5 , pBufferCh6 : Pointer ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetDataRaw7Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 , pBufferCh5 , pBufferCh6 , pBufferCh7 : Pointer ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpGetDataRaw8Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 , pBufferCh5 , pBufferCh6 , pBufferCh7 , pBufferCh8 : Pointer ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl;
function ScpChGetDataRawType( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl;
procedure ScpChGetDataRawValueRange( hDevice : TLibTiePieHandle ; wCh : Word ; pMin , pZero , pMax : PInt64 ); cdecl;
function ScpChGetDataRawValueMin( hDevice : TLibTiePieHandle ; wCh : Word ) : Int64; cdecl;
function ScpChGetDataRawValueZero( hDevice : TLibTiePieHandle ; wCh : Word ) : Int64; cdecl;
function ScpChGetDataRawValueMax( hDevice : TLibTiePieHandle ; wCh : Word ) : Int64; cdecl;
function ScpChIsRangeMaxReachable( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl;
function ScpIsGetDataAsyncCompleted( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function ScpStartGetDataAsync( hDevice : TLibTiePieHandle ; pBuffers : PPSingle ; wChannelCount : Word ; qwStartIndex , qwSampleCount : UInt64 ) : ByteBool; cdecl;
function ScpStartGetDataAsyncRaw( hDevice : TLibTiePieHandle ; pBuffers : PPointer ; wChannelCount : Word ; qwStartIndex , qwSampleCount : UInt64 ) : ByteBool; cdecl;
function ScpCancelGetDataAsync( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
procedure ScpSetCallbackDataReady( hDevice : TLibTiePieHandle ; pCallback : TTpCallback ; pData : Pointer ); cdecl;
procedure ScpSetCallbackDataOverflow( hDevice : TLibTiePieHandle ; pCallback : TTpCallback ; pData : Pointer ); cdecl;
procedure ScpSetCallbackConnectionTestCompleted( hDevice : TLibTiePieHandle ; pCallback : TTpCallback ; pData : Pointer ); cdecl;
procedure ScpSetCallbackTriggered( hDevice : TLibTiePieHandle ; pCallback : TTpCallback ; pData : Pointer ); cdecl;
{$ifdef LINUX}
procedure ScpSetEventDataReady( hDevice : TLibTiePieHandle ; fdEvent : Integer ); cdecl; deprecated;
procedure ScpSetEventDataOverflow( hDevice : TLibTiePieHandle ; fdEvent : Integer ); cdecl; deprecated;
procedure ScpSetEventConnectionTestCompleted( hDevice : TLibTiePieHandle ; fdEvent : Integer ); cdecl; deprecated;
procedure ScpSetEventTriggered( hDevice : TLibTiePieHandle ; fdEvent : Integer ); cdecl; deprecated;
{$endif LINUX}
{$ifdef MSWINDOWS}
procedure ScpSetEventDataReady( hDevice : TLibTiePieHandle ; hEvent : THandle ); cdecl; deprecated;
procedure ScpSetEventDataOverflow( hDevice : TLibTiePieHandle ; hEvent : THandle ); cdecl; deprecated;
